<resources>
    <string name="app_name">Calculator</string>
    <string name="number_one_label">Number 01</string>
    <string name="number_two_label">Number 02</string>

    <string name="divide_button_text">/</string>
    <string name="add_button_text">+</string>
    <string name="multiple_button_text">X</string>
    <string name="substract_button_text">-</string>
    <string name="answer">Answer</string>
    <string name="btn_back">Back</string>
</resources>